apps/velero/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: velero-httproute
  namespace: velero
spec:
  hostnames:
  - velero.lab.mpopov.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: eg
    namespace: networking
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: velero
      port: 8085
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
